--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express-session": "^1.15.6",
     "morgan": "~1.9.0",
     "redis": "^2.8.0",
+    "request": "^2.83.0",
     "serve-favicon": "~2.4.5"
   }
 }
