--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ejs": "~2.5.7",
     "express": "~4.15.5",
     "express-session": "^1.15.6",
+    "mongoose": "^5.0.1",
     "morgan": "~1.9.0",
     "redis": "^2.8.0",
     "request": "^2.83.0",
