--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "connect-redis": "^3.3.3",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
+    "echarts": "^4.0.2",
+    "echarts-wordcloud": "^1.1.3",
     "ejs": "~2.5.7",
     "express": "~4.15.5",
     "express-session": "^1.15.6",
