--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "~1.18.2",
     "connect-redis": "^3.3.3",
     "cookie-parser": "~1.4.3",
@@ -16,7 +17,9 @@
     "express": "~4.15.5",
     "express-session": "^1.15.6",
     "mongoose": "^5.0.1",
+    "mongoose-auto-increment": "^5.0.1",
     "morgan": "~1.9.0",
+    "multer": "^1.3.0",
     "redis": "^2.8.0",
     "request": "^2.83.0",
     "serve-favicon": "~2.4.5"
