--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "multer": "^1.3.0",
     "redis": "^2.8.0",
     "request": "^2.83.0",
-    "serve-favicon": "~2.4.5"
+    "sentry-node": "^2.2.1",
+    "serve-favicon": "~2.4.5",
+    "winston": "^2.4.0"
   }
 }
