--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ejs": "~2.5.7",
     "express": "~4.15.5",
     "express-session": "^1.15.6",
+    "fs": "0.0.1-security",
     "mongoose": "^5.0.1",
     "mongoose-auto-increment": "^5.0.1",
     "morgan": "~1.9.0",
@@ -25,6 +26,7 @@
     "request": "^2.83.0",
     "sentry-node": "^2.2.1",
     "serve-favicon": "~2.4.5",
-    "winston": "^2.4.0"
+    "winston": "^2.4.0",
+    "winston-daily-rotate-file": "^1.7.2"
   }
 }
